--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,7 @@ Description: An S4 implementation of Eq. (3) and Eq. (7)
     by David J. Hand and Robert J. Till (2001). A Simple Generalisation of
     the Area Under the ROC Curve for Multiple Class Classification Problems.
     Machine Learning, 45 (2), p. 171--186.  DOI:10.1023/A:1010920819831.
+URL: https://github.com/fvafrCU/HandTill2001
 Depends:
     R (>= 2.14),
     methods,
