--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,14 +4,12 @@ Title: Multiple Class Area under ROC Curve
 Version: 0.2-11
 Date: 2016-02-24
 Authors@R: c(person(given = c("Andreas", "Dominik"), family = "Cullmann",
-    email = "r-package_handtill2001@arcor.de", role = c("aut","cre"), comment = NULL,
-    first = NULL, last = NULL)
+    email = "r-package_handtill2001@arcor.de", role = c("aut","cre"), 
+    comment = NULL, first = NULL, last = NULL)
     , person(given = c("Edgar"), family=c("Kublin"), role = c("ctb"))
     )
-Description: An S4 implementation of Eq. (3) and Eq. (7)
-    by David J. Hand and Robert J. Till (2001). A Simple Generalisation of
-    the Area Under the ROC Curve for Multiple Class Classification Problems.
-    Machine Learning, 45 (2), p. 171--186.  DOI:10.1023/A:1010920819831.
+Description: An S4 implementation of Eq. (3) and Eq. (7) by David J. Hand  
+    <DOI:10.1023/A:1010920819831>.
 URL: https://github.com/fvafrCU/HandTill2001
 Depends:
     R (>= 2.14),
