--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,8 +8,8 @@ Authors@R: c(person(given = c("Andreas", "Dominik"), family = "Cullmann",
     comment = NULL, first = NULL, last = NULL)
     , person(given = c("Edgar"), family=c("Kublin"), role = c("ctb"))
     )
-Description: An S4 implementation of Eq. (3) and Eq. (7) by David J. Hand  
-    <DOI:10.1023/A:1010920819831>.
+Description: An S4 implementation of Eq. (3) and Eq. (7) by David J. Hand and 
+    Robert J. Till (2001) <DOI:10.1023/A:1010920819831>.
 URL: https://github.com/fvafrCU/HandTill2001
 Depends:
     R (>= 2.14),
