--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,12 @@
 Package: HandTill2001
 Type: Package
 Title: Multiple Class Area under ROC Curve
-Version: 0.2-11
-Date: 2016-02-24
+Version: 0.2-12
+Date: 2016-05-22
 Authors@R: c(person(given = c("Andreas", "Dominik"), family = "Cullmann",
-    email = "r-package_handtill2001@arcor.de", role = c("aut","cre"), 
-    comment = NULL, first = NULL, last = NULL)
-    , person(given = c("Edgar"), family=c("Kublin"), role = c("ctb"))
-    )
+            email = "r-package_handtill2001@arcor.de", role = c("aut","cre")), 
+        person(given = c("Edgar"), family=c("Kublin"), role = c("ctb"))
+        )
 Description: An S4 implementation of Eq. (3) and Eq. (7) by David J. Hand and 
     Robert J. Till (2001) <DOI:10.1023/A:1010920819831>.
 URL: https://github.com/fvafrCU/HandTill2001
